<?xml version="1.0" encoding="utf-8"?>

<!--
/**
 * Author:
 * StudentID: fk18726
 * RegNumber: 1804162
 **/
-->

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:aapt="http://schemas.android.com/aapt"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/dark_salmon"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="160dp"
        android:layout_height="160dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_launcher_foreground"
        tools:layout_editor_absoluteY="150dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:textSize="24sp"
        android:textColor="@color/white"
        android:gravity="center"
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="40dp"
        android:text="@string/ce881_sudoku"
        android:fontFamily="sans-serif"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:text="@string/first_greetings"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.33">

        <Button
            android:id="@+id/buttonContinue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="64dp"
            android:height="64dp"
            android:onClick="buttonContinue"
            android:text="@string/continue_puzzle" />

        <Button
            android:id="@+id/buttonNew"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="64dp"
            android:layout_marginVertical="32dp"
            android:height="64dp"
            android:onClick="buttonNew"
            android:text="@string/new_puzzle" />

        <Button
            android:id="@+id/buttonSolver"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="64dp"
            android:height="64dp"
            android:onClick="buttonSolver"
            android:text="@string/puzzle_solver" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
